--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -6,10 +6,10 @@ author: |
 date: |
   | \hfill `r Sys.Date()`
 output:
-  html_document:
+  pdf_document:
     toc: no
     number_sections: false
-  pdf_document:
+  html_document:
     toc: no
     number_sections: false
 header-includes: 
@@ -25,7 +25,7 @@ header-includes:
 knitr::opts_chunk$set(fig.width = 6, fig.height = 4, fig.path = 'figs/',
                       echo = FALSE, message = FALSE, warning = FALSE)
 
-# source('https://raw.githubusercontent.com/oharac/src/master/R/common.R')
+source('https://raw.githubusercontent.com/oharac/src/master/R/common.R')
 ### loads tidyverse packages, defines helper functions
 
 library(tidyverse)
@@ -130,6 +130,8 @@ Vincent is a buttface! $$buttface = butt + face(Vincent)$$
 However, Jacob is a buttierface! $$buttface_j = butt + face(Jacob)$$
 
 $buttface_j>buttface_v$
+
+everybody is a buttface
 
 ### 6.5 Suppose that George and Hazel from the previous problems have no transactions costs and always bargain to the Nash bargaining solution.
 
