--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -131,7 +131,7 @@ However, Jacob is a buttierface! $$buttface_j = butt + face(Jacob)$$
 
 $buttface_j>buttface_v$
 
-everybody is a buttface
+everybody is a buttface, but especially Jacob. 
 
 ### 6.5 Suppose that George and Hazel from the previous problems have no transactions costs and always bargain to the Nash bargaining solution.
 
