--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -1,6 +1,9 @@
 ---
 title: | 
-  | \hfill \Large{Casey O'Hara}
+  | \hfill \large{Albert Garcia}
+  | \hfill \large{Jacob Gellman}
+  | \hfill \large{Casey O'Hara}
+  | \hfill \large{Vincent Thivierge}
 author: |
   | \hfill Econ 230B
 date: |
@@ -38,11 +41,10 @@ library(latex2exp)
 \newcommand{\LL}{\mathscr{L}}
 \newcommand{\dd}{\partial}
 
-<!-- This is a template for homework assignments to be written in LaTeX formatting -->
-
-# HW4
 
 ## Exercises Lecture 6
+
+We all worked on our problem sets individually and came to consensus on answers as a group, so we chose to collaborate on the LaTeX work and submit our final answers as a group.  Please let us know if this is a problem and we will work in smaller groups on future problem sets.
 
 ### 6.1 George’s utility function is
 $$U_G(x, y) = 48x - x^2 + z_G$$
@@ -135,11 +137,51 @@ b) Assuming that the government imposes strict liability and that the threat poi
 
 ### 6.6 Suppose that George and Hazel from the previous problems have no transactions costs and always bargain to the Nash bargaining solution. The government imposes the tax rate $t$ that induced George to perform a Pareto optimal amount of activity $X$ when George and Hazel were unable to bargain and the money was given to Isolde.
 
-a) If the government gives the taxrevenue to Isolde, what levels of activities $X$ and $Y$ will George and Hazel choose?
+a) If the government gives the tax revenue to Isolde, what levels of activities $X$ and $Y$ will George and Hazel choose?
+    * If George is taxed at the rate from question 6.3, his budget constraint, and therefore, the joint feasibility constraint, is altered. The corresponding Lagrangian is as follows:
+\begin{align*}
+  \LL       &= \lambda_1[48x - x^2 + z_G] + \lambda_2[60y - y^2 - xy + z_H] + 
+      \mu[w_G + w_H - z_G - z_H - tx]\\
+  \LL_x     &= \lambda_1[48 - 2x] - \lambda_2y = t\mu\\
+  \LL_y     &= \lambda_2[60 - 2y - x] = 0\\
+  \LL_{z_G} &= \lambda_1 = \mu\\
+  \LL_{z_H} &= \lambda_2 = \mu
+\end{align*}
+    * Accounting for the fact that $t = 24$ yields the following two equations:
+\begin{align*}
+  48 - 2x &= 24 + y\\
+  x &= 60 - 2y
+\end{align*}
+    * Solving these gives $x = -4$, which is not feasible. Thus, George is put at a corner and $x = 0$. Then, $y = 30$. 
 b) If the government splits the taxrevenue between George and Hazel, what levels of activities $X$ and $Y$ will George and Hazel choose?
+    * Similar to above, the feasibility constraint is altered. We now have the constraint:
+\begin{align*}
+  z_G + \frac{1}{2} tx + z_H + \frac{1}{2} tx - tx &\leq w_G + w_H\\
+  \Leftrightarrow z_G + z_H &\leq w_G + w_H
+\end{align*}
+    * We then have the same budget constraint as the intitial case. We know the Nash bargaining solution attains the efficient outcome, and thus, $x = 12$, $y = 24$ as found before. 
 
 ### 6.7 Hazel and George have one and only chance to make a deal. 
 The chance works like this. Hazel offers George an all-or-nothing proposition. If George reduces his $X$ing to a level $x^*$, Hazel will give him a lump sum payment of $z^*$ dollars. If George rejects this deal, then the outcome will revert to the noncooperative Nash equilibrium in which there is no government interference. After George has either accepted or rejected the deal that he is offered, Hazel can decide on the amount of $Y$ing that she will do. Hazel knows George’s utility function. Assuming that George will accept any deal that is as good or better for him than the Nash equilibrium outcome, what combination of $x^*$ and $z^*$ should Hazel make in order to maximize her utility?
+
+* Recall in Nash equilibrium that $x=24$, $y=18$. This gives:
+\begin{align*}
+  U_G = 576 + z_G\\
+  U_H = 324 + z_H
+\end{align*}
+* If Hazel is to make an offer to George, she knows he will accept if
+\begin{align*}
+  U(x^*) + z^* \geq 576 + z_G\\
+  \Leftrightarrow 48x^* - x^{*2} + z^* \geq 576
+\end{align*}
+* Then Hazel maximizes 
+$$60y - y^2 - x^*y + z_H - z^* \hspace{5mm} \text{s.t.} \hspace{5mm} 48x^* - x^{*2} + z^* \geq 576$$
+* First order conditions reveal:
+\begin{align*}
+  60 - 2y - x &= 0\\
+  -y + 48 - 2x &= 0
+\end{align*}
+* This yields $x^* = 12$, $z^* = 576 + 144 - 48(12) = 144$.
 
 ### 6.8 This problem is like the previous one except for one thing. Hazel does not know George’s utility function. 
 Hazel knows that George’s utility function is of the functional form: $UG(x, z_G) = Ax - x^2 + z_G$, but all she knows about $A$ is that with probability 1/2, $A = 36$ and with probability 1/2, $A = 60$.
