--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -127,8 +127,22 @@ $$U_G = 48x - x^2 + z_G + px; \hspace{6pt} U_H = 60y - y^2 + z_H - px$$
 * Note this is subject to a budget constraint: $px \leq z_G$, otherwise George can't afford as much $X$ as he would prefer.
 
 ### 6.4 Suppose that George and Hazel of the previous problems are able to communicate cheaply and easily. 
-Whenever there are possible gains from a deal between them, they will make a deal. The outcome of the deal always turns out to be the Nash bargaining solution (sometimes called the “cooperative” Nash solution). In any situation, they recognize a “threat point”, which is the distribution of utility $(\bar U_G, \bar U_H)$ that they would achieve if they make no deal. The result of bargaining is that they find the point on the utility possibility frontier that maximizes the product $(U_G - \bar U_G)(U_H - \bar U_H)$ over all possible utility distributions in their utility possibility set. Prove that in doing so, Hazel and George will choose the point on the utility possibility frontier such that $U_G - \bar U_G = U_H - \bar U_H$. Would this be true regardless of the shape of the utility possibility frontier? Explain.  
-
+Whenever there are possible gains from a deal between them, they will make a deal. The outcome of the deal always turns out to be the Nash bargaining solution (sometimes called the “cooperative” Nash solution). In any situation, they recognize a “threat point”, which is the distribution of utility $(\bar U_G, \bar U_H)$ that they would achieve if they make no deal. The result of bargaining is that they find the point on the utility possibility frontier that maximizes the product $(U_G - \bar U_G)(U_H - \bar U_H)$ over all possible utility distributions in their utility possibility set. Prove that in doing so, Hazel and George will choose the point on the utility possibility frontier such that $U_G - \bar U_G = U_H - \bar U_H$. Would this be true regardless of the shape of the utility possibility frontier? Explain. 
+  
+The bargaining point solves  
+  
+$\max\limits_{X,Y} (U_G-\bar{U}_G)(U_H-\bar{U}_H)$  
+  
+Taking FOCs:  
+  
+$\frac{\partial U}{\partial X} = \frac{\partial U_G}{\partial X}U_H + \frac{\partial U_H}{\partial X}U_G -  \frac{\partial U_G}{\partial X}\bar{U}_H - \frac{\partial U_H}{\partial X}\bar{U}_G=0$  
+$\frac{\partial U}{\partial Y} = \frac{\partial U_G}{\partial Y}U_H + \frac{\partial U_H}{\partial Y}U_G -  \frac{\partial U_G}{\partial Y}\bar{U}_H - \frac{\partial U_H}{\partial Y}\bar{U}_G=0$  
+$\Rightarrow \frac{\partial U_G}{\partial X}U_H + \frac{\partial U_H}{\partial X}U_G -  \frac{\partial U_G}{\partial X}\bar{U}_H - \frac{\partial U_H}{\partial X}\bar{U}_G = \frac{\partial U_G}{\partial Y}U_H + \frac{\partial U_H}{\partial Y}U_G -  \frac{\partial U_G}{\partial Y}\bar{U}_H - \frac{\partial U_H}{\partial Y}\bar{U}_G=0$  
+$\Rightarrow (\frac{\partial U_H}{\partial X} - \frac{\partial U_H}{\partial Y})(U_G-\bar{U}_G) = (\frac{\partial U_G}{\partial Y} - \frac{\partial U_G}{\partial X})(U_H-\bar{U}_H)$  
+  
+Recall from the Samuelson condition:  
+$\frac{\partial U_G / \partial X}{\partial U_G / \partial Z_G} + \frac{\partial U_H / \partial X}{\partial U_H / \partial Z_H} = MSC_X$  
+$\Rightarrow \frac{\partial U_G}{\partial X} + \frac{\partial U_H}{\partial X} = 0$  (since utility is quasilinear, and $MSC_X = 0$)
 
 ### 6.5 Suppose that George and Hazel from the previous problems have no transactions costs and always bargain to the Nash bargaining solution.
 
