--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -129,42 +129,57 @@ $$U_G = 48x - x^2 + z_G + px; \hspace{6pt} U_H = 60y - y^2 + z_H - px$$
 ### 6.4 Suppose that George and Hazel of the previous problems are able to communicate cheaply and easily. 
 Whenever there are possible gains from a deal between them, they will make a deal. The outcome of the deal always turns out to be the Nash bargaining solution (sometimes called the “cooperative” Nash solution). In any situation, they recognize a “threat point”, which is the distribution of utility $(\bar U_G, \bar U_H)$ that they would achieve if they make no deal. The result of bargaining is that they find the point on the utility possibility frontier that maximizes the product $(U_G - \bar U_G)(U_H - \bar U_H)$ over all possible utility distributions in their utility possibility set. Prove that in doing so, Hazel and George will choose the point on the utility possibility frontier such that $U_G - \bar U_G = U_H - \bar U_H$. Would this be true regardless of the shape of the utility possibility frontier? Explain. 
   
-The bargaining point solves  
-\begin{align*}  
-\max\limits_{X,Y} (U_G-\bar{U}_G)(U_H-\bar{U}_H)
-\end{align*}
-  
-Taking FOCs:  
-\begin{align*}
-&\frac{\partial U}{\partial X} = \frac{\partial U_G}{\partial X}U_H + \frac{\partial U_H}{\partial X}U_G -  \frac{\partial U_G}{\partial X}\bar{U}_H - \frac{\partial U_H}{\partial X}\bar{U}_G=0  \\
-&\frac{\partial U}{\partial Y} = \frac{\partial U_G}{\partial Y}U_H + \frac{\partial U_H}{\partial Y}U_G -  \frac{\partial U_G}{\partial Y}\bar{U}_H - \frac{\partial U_H}{\partial Y}\bar{U}_G=0  \\
-\Rightarrow &\frac{\partial U}{\partial X} = \frac{\partial U}{\partial Y}\\
-\Rightarrow &\frac{\partial U_G}{\partial X}U_H + \frac{\partial U_H}{\partial X}U_G -  \frac{\partial U_G}{\partial X}\bar{U}_H - \frac{\partial U_H}{\partial X}\bar{U}_G = \frac{\partial U_G}{\partial Y}U_H + \frac{\partial U_H}{\partial Y}U_G -  \frac{\partial U_G}{\partial Y}\bar{U}_H - \frac{\partial U_H}{\partial Y}\bar{U}_G  \\
-\Rightarrow & (\frac{\partial U_H}{\partial X} - \frac{\partial U_H}{\partial Y})(U_G-\bar{U}_G) = (\frac{\partial U_G}{\partial Y} - \frac{\partial U_G}{\partial X})(U_H-\bar{U}_H)  \\
-\end{align*}
-  
-Recall from the Samuelson condition:  
-\begin{align*}
-\frac{\partial U_G / \partial X}{\partial U_G / \partial Z_G} + \frac{\partial U_H / \partial X}{\partial U_H / \partial Z_H} &= MSC_X & \\
-\Rightarrow \frac{\partial U_G}{\partial X} + \frac{\partial U_H}{\partial X} &= 0 & \text{ (since utility is quasilinear, and $MSC_X = 0$)}\\
-\Rightarrow \frac{\partial U_G}{\partial X} &= - \frac{\partial U_H}{\partial X} & \\
-\end{align*}
-
-The other Samuelson condition:  
-\begin{align*}
-\frac{\partial U_G / \partial Y}{\partial U_G / \partial Z_G} + \frac{\partial U_H / \partial Y}{\partial U_H / \partial Z_H} &= MSC_Y & \\
-\Rightarrow \frac{\partial U_G}{\partial Y} + \frac{\partial U_H}{\partial Y} &= 0 & \text{ (since utility is quasilinear, and $MSC_Y = 0$)}\\
-\Rightarrow \frac{\partial U_G}{\partial Y} &= - \frac{\partial U_H}{\partial Y} & \\
-\end{align*}
-
-Subbing in to the condition derived from the FOCs:  
-\begin{align*}
-& (\frac{\partial U_H}{\partial X} - \frac{\partial U_H}{\partial Y})(U_G-\bar{U}_G) = (\frac{\partial U_G}{\partial Y} - \frac{\partial U_G}{\partial X})(U_H-\bar{U}_H)  \\
-\Rightarrow & (\frac{\partial U_H}{\partial X} - \frac{\partial U_H}{\partial Y})(U_G-\bar{U}_G) = (-\frac{\partial U_H}{\partial Y} - (-\frac{\partial U_H}{\partial X}))(U_H-\bar{U}_H)  \\
-\Rightarrow & (U_G-\bar{U}_G) = (U_H-\bar{U}_H)  \\
-\end{align*}
-
-This result depended on quasilinear utility forms, so if the private good affected the Samuelson condition then we might not achieve the same result.  
+* The bargaining point solves  
+  \begin{align*}  
+    \max\limits_{X,Y} (U_G-\bar{U}_G)(U_H-\bar{U}_H)
+  \end{align*}
+* Taking FOCs:  
+  \begin{align*}
+    &\frac{\dd U}{\dd X} = \frac{\dd U_G}{\dd X}U_H + \frac{\dd U_H}{\dd X}U_G -  \frac{\dd U_G}{\dd X}\bar{U}_H - \frac{\dd U_H}{\dd X}\bar{U}_G=0  \\
+    &\frac{\dd U}{\dd Y} = \frac{\dd U_G}{\dd Y}U_H + 
+        \frac{\dd U_H}{\dd Y}U_G -  
+        \frac{\dd U_G}{\dd Y}\bar{U}_H - 
+        \frac{\dd U_H}{\dd Y}\bar{U}_G=0  \\
+    \Rightarrow &\frac{\dd U}{\dd X} = \frac{\dd U}{\dd Y}\\
+    \Rightarrow &\frac{\dd U_G}{\dd X}U_H + \frac{\dd U_H}{\dd X}U_G -  
+        \frac{\dd U_G}{\dd X}\bar{U}_H - \frac{\dd U_H}{\dd X}\bar{U}_G = 
+        \frac{\dd U_G}{\dd Y}U_H + \frac{\dd U_H}{\dd Y}U_G - 
+        \frac{\dd U_G}{\dd Y}\bar{U}_H - \frac{\dd U_H}{\dd Y}\bar{U}_G  \\
+    \Rightarrow & (\frac{\dd U_H}{\dd X} - 
+        \frac{\dd U_H}{\dd Y})(U_G-\bar{U}_G) = 
+        (\frac{\dd U_G}{\dd Y} - \frac{\dd U_G}{\dd X})(U_H-\bar{U}_H)  \\
+  \end{align*}
+* Recall from the Samuelson condition:  
+  \begin{align*}
+  \frac{\dd U_G / \dd X}{\dd U_G / \dd Z_G} + 
+      \frac{\dd U_H / \dd X}{\dd U_H / \dd Z_H} &= MSC_X & \\
+  \Rightarrow \frac{\dd U_G}{\dd X} + 
+      \frac{\dd U_H}{\dd X} &= 0 
+      & \text{ (since utility is quasilinear, and $MSC_X = 0$)}\\
+  \Rightarrow \frac{\dd U_G}{\dd X} &= - \frac{\dd U_H}{\dd X} & \\
+  \end{align*}
+* The other Samuelson condition:  
+  \begin{align*}
+    \frac{\dd U_G / \dd Y}{\dd U_G / \dd Z_G} + 
+        \frac{\dd U_H / \dd Y}{\dd U_H / \dd Z_H} &= MSC_Y & \\
+    \Rightarrow \frac{\dd U_G}{\dd Y} + 
+        \frac{\dd U_H}{\dd Y} &= 0 
+        & \text{ (since utility is quasilinear, and $MSC_Y = 0$)}\\
+    \Rightarrow \frac{\dd U_G}{\dd Y} &= - \frac{\dd U_H}{\dd Y} & \\
+  \end{align*}
+* Subbing in to the condition derived from the FOCs:  
+  \begin{align*}
+    & (\frac{\dd U_H}{\dd X} - 
+        \frac{\dd U_H}{\dd Y})(U_G-\bar{U}_G) 
+        = (\frac{\dd U_G}{\dd Y} - 
+        \frac{\dd U_G}{\dd X})(U_H-\bar{U}_H)  \\
+    \Rightarrow & (\frac{\dd U_H}{\dd X} - 
+        \frac{\dd U_H}{\dd Y})(U_G-\bar{U}_G) 
+        = (-\frac{\dd U_H}{\dd Y} - 
+        (-\frac{\dd U_H}{\dd X}))(U_H-\bar{U}_H)  \\
+    \Rightarrow & (U_G-\bar{U}_G) = (U_H-\bar{U}_H)  \\
+  \end{align*}
+* This result depended on quasilinear utility forms, so if the private good affected the Samuelson condition then we might not achieve the same result.  
 
 ### 6.5 Suppose that George and Hazel from the previous problems have no transactions costs and always bargain to the Nash bargaining solution.
 
@@ -236,17 +251,13 @@ $$U_i(D_i, M_i, C) = A_i D_i - \frac{1}{2}D_i^2 - D_i \frac{D}{H} + M_i$$
 where for each $i$, $D_i$ is driving by $i$, $D = \sum_{j=1}^n D_j$, $M_i$ is money expenditure by $i$ on goods, $H$ is total highway expenditures in Carburetor and where $A_i > 1$ is a parameter for each $i$. Gasoline is available for free in Carburetor, and it costs nothing to maintain cars. The only goods that money can buy in Carburetor are Big Macs and highway improvements. The initial endowment of income is $W_i$ for each $i$. The price of Big Macs is \$1.
 
 1. Since preferences are quasilinear, the Pareto optimal amount of driving for each $i$ and the Pareto optimal total highway expenditures must be independent of income distribution (except for the case of Pareto optimal allocations where some consumers consume no Big Macs). Find these Pareto optimal quantities.
-
-* Samuelson condition for efficient amount of highway expenditure, $H$
-
+    * Samuelson condition for efficient amount of highway expenditure, $H$
 \begin{align*}
    C_{H}(C,D) \sum^{n}_{j=1}\left(\frac{U^i_C(M_j, D_j, C)}{U^i_M(M_j, D_j, C}\right) &= p_H \\
   \frac{D}{H^2} \sum^{n}_{j=1} D_i &= p_H \\
   H &= \frac{\sqrt{p_H}}{D}
 \end{align*} 
-
-* Samuelson condition for efficient amount of driving, $D$
-
+    * Samuelson condition for efficient amount of driving, $D$
 \begin{align*}
 & \frac{U^i_D(M_j, D_j, C)}{U^i_M(M_j, D_j, C)} +  C_{D}(D,H) \sum^{n}_{j=1}\left(\frac{U^i_C(M_j, D_j, C)}{U^i_M(M_j, D_j, C)}\right) = 0 \\
 & A_i - D_i - \frac{D}{H} - \frac{1}{H} \sum^{n}_{j=1} D_i = 0 \\
@@ -255,17 +266,12 @@ where for each $i$, $D_i$ is driving by $i$, $D = \sum_{j=1}^n D_j$, $M_i$ is mo
 & \sum^{n}_{j=1}D_i = \sum^{n}_{j=1}\left(A_i - 2\frac{D}{H} \right)\\
 &  D =  \sum^{n}_{j=1}A_i - 2n\frac{D}{H} 
 \end{align*} 
-
-* Combining both initial solution with endogeneous terms 
-
+    * Combining both initial solution with endogeneous terms 
 \begin{align*}
 & D^* = \sum^{n}_{j=1}A_i - 2n\sqrt{p_H} \\
 & H^* = \frac{1}{\sqrt{p_H}} \sum^{n}_{j=1}A_i - 2n
 \end{align*} 
-
-
 2. If no tolls are charged, find the Nash equilibrium amount of driving by each resident of Carburetor.
-
 \begin{align*}
 & \max \limits_{D_i, M_i} U_i(D_i, M_i, C) \hspace{10pt} \text{s.t.} \hspace{10pt} M_i \leq W_i \\
 & \max \limits_{D_i} A_i D_i - \frac{1}{2}D_i^2 - D_i \frac{D}{H} + W_i 
@@ -280,9 +286,7 @@ FOC:
 & D^* = \frac{H}{H + n + 1} \sum^{n}_{j=1}A_i  \\
  \implies &D_i^* = \frac{1}{H + 1}\left( H A_i - \frac{H}{H + n + 1} \sum^{n}_{j=1}A_i \right)
 \end{align*} 
-
 3. Suppose that each resident of Carburetor is charged a uniform toll according to the rule suggested in the text of this lecture. What will this toll be? How much driving will each $i$ do?
-
 \begin{align*}
 & T = -p_H \left( \frac{C_D(D,H)}{C_H(D,H)} \right) \\
 & T = p_H \frac{H}{D} 
