--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -21,6 +21,7 @@ header-includes:
   - \usepackage{pgfplots}
   - \usepackage{amsmath}
   - \usepackage{mathrsfs}
+  - \usepackage{nccmath} 
 ---
 
 ``` {r setup, echo = FALSE, message = FALSE, warning = FALSE, include = FALSE}
