--- a/econ230b/hw/hw6/hw6.Rmd
+++ b/econ230b/hw/hw6/hw6.Rmd
@@ -262,8 +262,44 @@ a) Hazel offers to give George a lump sum payment of of $z^*$ dollars if he redu
            \end{cases}
     \]
 
-* Strategy 1 by Hazel: Making sure George accepts independent of his type: 
+  \[ \Leftrightarrow x = \begin{cases} 
+        36x^* - (x^*)^2 + z^*\geq 324 & \text{if $A=36$}    \\
+        60x^* - (x^*)^2 + z^* \geq 900  & \text{if $A=60$}      
+           \end{cases}
+    \]
 
+Strategy 1 by Hazel: Making sure George accepts independent of his type, hence pick $x^*$ when $A=60$ and Hazel maximizes: 
+
+$$60y - y^2 - x^*y + z_H - z^* \hspace{5mm} \text{s.t.} \hspace{5mm} 60x^* - (x^*)^2 \geq 900$$
+
+* FOCs: 
+\begin{align*}
+ & 60 - 2y - x =0\\
+ & y + 60 -2x = 0\\
+\end{align*} 
+
+* This yields $x^* = 20$, $z^* =  100$. George accepts for both of his types. 
+
+Strategy 2 by Hazel: Only make sure George accepts if $A=36$
+
+$$60y - y^2 - x^*y + z_H - z^* \hspace{5mm} \text{s.t.} \hspace{5mm} 36x^* - (x^*)^2 \geq 324$$
+
+* FOCs: 
+\begin{align*}
+ & 60 - 2y - x =0\\
+ & y + 36 -2x = 0\\
+\end{align*} 
+
+* This yields $x^* = 4$, $z^* =  196$. George accepts only if $A=36$.
+
+* Now to compare the utilities of each strategy: 
+
+\begin{align*}
+& U^H(20,100) = 300 + W_H \\
+& E\[U^H(4,196)\] = 324 + W_H \\
+\end{align*} 
+
+Since U^H(20,100) <E\[U^H(4,196)\], she would pick the second strategy. 
 
 b) Show that for any offer that Hazel makes, there is a probability of at least 1/2 that the amount of $X$ selected by George is not Pareto optimal.
 
